# Derby

./: .env.example  .gitignore  CHANGELOG.md  README.md  RUNBOOK.md  enrich_odds.py  pyproject.toml
.squad/: ceremonies.md  decisions.md  followups.md  routing.md  team.md
data/: going-enrichment-status.json  going-enrichment-summary.json  going-forecast.json
docs/: data-layout.md
outputs/: DELIVERY_SUMMARY.md  belinus-diomed-2026-06-05-protocol.md  bets-2026-06-05.json  bets-2026-06-06-soft-contingency.json  bets-2026-06-06.json  racecard-2026-06-05.html  racecard-2026-06-06-hold.html  racecard-2026-06-06-v04-verified.html  racecard-2026-06-06.html  report-2026-06-05.html  report-2026-06-06.html  scores-2026-06-05.json  scores-2026-06-06.json  slip-2026-06-06.txt
scripts/: check_env.py  clean_card_pass.py  going_html_dump.txt  list_races.py  morning_odds.py  playwright_atr_scraper.py  probe_api.py  probe_api2.py  probe_autocomplete.py  probe_cato_belinus.py  probe_cato_pages.py  probe_chester_results.py  probe_form_page.py  probe_form_submit.py  probe_forms.py  probe_going_table.py  probe_horse_urls.py  probe_in_page_search.py  probe_links.py  probe_may7_results.py  probe_news_links.py  probe_profiles.py  probe_results_format.py  probe_search2.py  probe_search_api.py  probe_search_api3.py  probe_search_dom.py  probe_search_len.py  probe_search_submit.py  probe_search_type.py  probe_search_ui.py  probe_search_variations.py  probe_table6_extract.py  probe_tables.py  probe_urls.py  refresh_friday.py  rerender_derby_2026.py  scrape_racingpost.deprecated.py  scrape_racingpost.py  scrape_sportinglife.deprecated.py  (+4 more)
spec/: backtest-protocol.md  betting-strategy-v0.1.md  module-contracts.md  scoring-model-v0.1.md  v0.1-spec.md
src/: __init__.py  bet_schema.py  betting.py  cd_form.py  cli.py  course_config.py  equipment.py  going.py  jt_combo.py  market_drift.py  market_move.py  pace.py  racecard.py  render_helpers.py  report.py  scoring.py  sires.py  sl_parser.py  slip.py  trainer_14d.py  trial_form.py
tests/: backtest.py  test_bet_schema_transition.py  test_betting.py  test_cd_form.py  test_check_env.py  test_chunk2_ascot_smoke.py  test_chunk4_priors.py  test_cli_card_trifecta.py  test_cli_fetch_from_file.py  test_cli_predict_schema.py  (+18 more)
(+137 files in other folders)
